Bug 336813 - Color theme settings are not set
Summary: Color theme settings are not set
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: 5.0.0
Platform: unspecified Other
: NOR normal
Target Milestone: ---
Assignee: Matthew Woehlke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-27 21:11 UTC by enoopt.adams
Modified: 2015-01-09 11:20 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Elements don't change (2.15 MB, image/png)
2014-12-16 01:41 UTC, enoopt.adams
Details

Note You need to log in before you can comment on or make changes to this bug.
Description enoopt.adams 2014-06-27 21:11:43 UTC
In the latest project-neon iso, changing the color scheme doesn't work. No colors change, and if you relaunch system settings, the theme is reset to the default.

Reproducible: Always
Comment 1 Kelytha 2014-08-08 17:29:54 UTC
Also happens on Arch Linux.
Comment 2 Maxime Corteel 2014-10-15 13:30:10 UTC
I have been getting this on openSuSE Factory for some time now (using daily builds, currently 5.1).
It does change the theme for non-KDE applications (e.g. firefox), but not for any KDE app.
The only console output I get is "QFile::copy: Empty or null file name" when I try to set the theme back to the default one after trying another.
Comment 3 David Edmundson 2014-11-09 16:59:46 UTC
Oh this is odd.

I can switch to Breeze dark perfect. Switching to a scheme I've just installed fails.
Comment 4 Maxime Corteel 2014-11-09 21:32:39 UTC
It now works for me too, though installed themes don't work (even if I close the KCM and reopen it). I would say that this is another bug, but I don't know where to file it...
Comment 5 David Edmundson 2014-12-15 23:02:12 UTC
Git commit a9f6ae7f352293cd4ad81782a21aa381433e81f9 by David Edmundson.
Committed on 15/12/2014 at 16:46.
Pushed by davidedmundson into branch 'master'.

Actually set the palette when it changes

Simply emitting an event that the palette has changed has absolutely no effect
as QApplication keeps a cache of the palette, we need to update that appropriately

REVIEW: 121536

M  +10   -3    src/platformtheme/khintssettings.cpp

http://commits.kde.org/frameworkintegration/a9f6ae7f352293cd4ad81782a21aa381433e81f9
Comment 6 enoopt.adams 2014-12-16 01:41:58 UTC
Created attachment 89998 [details]
Elements don't change

Some elements still don't change right away. A restart of the application fixes the problem. Is there any way to get these elements to change colors without a restart?
Comment 7 David Edmundson 2014-12-16 11:11:30 UTC
Yep, I made a comment in my review request.

The systemsettings part is fine, there's something wrong in Breeze for a few frames:
tracking that here https://bugs.kde.org/show_bug.cgi?id=341940#c1

Thanks for pointing it out, good to know someone is testing and watching my back :)