Actually set the palette when it changes

Simply emitting an event that the palette has changed has absolutely no effect
as QApplication keeps a cache of the palette, we need to update that appropriately

REVIEW: 121536
BUG: 336813